# Fast-Api-Course

./: .gitignore  .python-version  pyproject.toml
fast_api_tasks/: app.py
tests/: test_app.py
