[tool.poetry]
name = "fast-api-tasks"
version = "0.1.0"
description = ""
authors = ["joaopedromsantos <joaomartinscrf2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'

pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_api_tasks -vv'
post_test = 'coverage html'

pre_format = 'ruff check --fix'
format = 'ruff check . --fix && ruff format .'

run = 'fastapi dev fast_api_tasks/app.py'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
